# SlimeVR-Server

./: .classpath  .editorconfig  .envrc  .eslintrc.json  .gitattributes  .gitignore  .gitmodules  .imgbotconfig  .lintstagedrc.mjs  .project  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SlimeVR-Server.sln  TRADEMARK.md  build.gradle  build.gradle.kts  deny.toml  dev.slimevr.SlimeVR.metainfo.xml  flake.nix  gradle.properties  l10n.toml  local.properties  log_main.log.1  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  protobuf_update.bat  rust-toolchain.toml  rustfmt.toml  settings.gradle  settings.gradle.kts  spotless.xml  tailwind.config.js  tsconfig.json  (+1 more)
.github/: CODEOWNERS  labeler.yml
.github/workflows/: build-gui.yml  build.yml  codeowners-merge.yml  generate-update-manifest.yml  gradle.yaml  gradle.yml  pontoon-pr.yml  rebase.yml
.husky/: pre-commit
.opencode/skills/compare-with-main/: SKILL.md
BVH Recordings/: BVH-Recording1.bvh  BVH-Recording10.bvh  BVH-Recording11.bvh  BVH-Recording12.bvh  BVH-Recording2.bvh  BVH-Recording3.bvh  BVH-Recording4.bvh  BVH-Recording5.bvh  BVH-Recording6.bvh  BVH-Recording7.bvh  BVH-Recording8.bvh  BVH-Recording9.bvh
bindings-provider/: .clang-format  .gitignore  CMakeLists.txt  vcpkg-configuration.json
bindings-provider/src/: logger.cpp  logger.hpp  main.cpp  paths.cpp  paths.hpp  solarxr.cpp  solarxr.hpp  vr_utils.cpp  vr_utils.hpp
bindings-provider/src/resources/: action_manifest.json  generic.json  knuckles.json  manifest.vrmanifest  oculus_touch.json  resources.hpp.in  vive_controller.json
buildSrc/: build.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
gui/: .env  .env.sentry-build-plugin  .eslintrc.json  .gitignore  .lintstagedrc.mjs  Cargo.toml  LICENSE  LICENSE.md  README.md  electron-builder.yml  electron.vite.config.ts  eslint.config.js  index.html  openapi-codegen.config.ts  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  webpack.config.js
gui/docs/: LICENSE-APACHE  LICENSE-MIT
gui/electron/: .gitignore  shared.ts
gui/electron/main/: cli.ts  index.ts  logger.ts  paths.ts  presence.ts  store.ts  updater.ts  utils.ts
gui/electron/preload/: index.ts  interface.d.ts
gui/electron/resources/: 69-slimevr-devices.rules
gui/public/: manifest.json
gui/public/images/: mounting-reset-pose.avif  reset-sitting-pose.kra
gui/public/models/: extension.gltf  tracker.gltf
gui/public/videos/: autobone.webm  turn-on-tracker.webm  vrchatosc.webm
gui/scripts/: check-missing.js  convert-fluent.js  gitversion.mjs  license-list.mjs  notarize.js
gui/src/: App.tsx  AppLayout.tsx  global.d.ts  index.css  index.scss  index.tsx  react-app-env.d.ts  vite-env.d.ts
gui/src-tauri/: .gitignore  .lintstagedrc.mjs  69-slimevr-devices.rules  Cargo.toml  build.rs  dev.slimevr.SlimeVR.desktop  dev.slimevr.SlimeVR.metainfo.xml  safe-mode.dev.slimevr.SlimeVR.desktop  tauri.android.conf.json  tauri.conf.json  tauri.macos.conf.json
gui/src-tauri/capabilities/: migrated.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: JavaVersion.java  cross.rs  lib.rs  main.rs  presence.rs  state.rs  tray.rs  util.rs
gui/src/components/: BVHButton.tsx  ClearDriftCompensationButton.tsx  ClearMountingButton.tsx  EmptyLayout.scss  EmptyLayout.tsx  ErrorConsentModal.tsx  MainLayout.scss  MainLayout.tsx  Navbar.tsx  Preload.tsx  ProfilesDropdown.tsx  SerialDetectionModal.tsx  SessionFlightList.tsx  Sidebar.tsx  Toolbar.tsx  TopBar.tsx  TrackersStillOnModal.tsx  TrackingPauseButton.tsx  TrayOrExitModal.tsx  UnknownDeviceModal.tsx  VersionUpdateModal.tsx  WidgetsComponent.tsx
gui/src/firmware-tool-api/: firmwareToolComponents.ts  firmwareToolContext.ts  firmwareToolFetcher.ts  firmwareToolSchemas.ts  firmwareToolUtils.ts
gui/src/hooks/: app.ts  autobone.ts  body-parts.ts  body-proportions.ts  breakpoint.ts  bvh.ts  cache.ts  chocker-warning.ts  choker-warning.ts  config.ts  countdown.ts  crossplatform.ts  crypto.ts  electron.ts  (+27 more)
logs/: log_2022-04-24.log.1
native/MagnetoLib/: Magneto.cpp  MagnetoLib.cpp  MagnetoLib.sln  MagnetoLib.vcxproj  MagnetoLib.vcxproj.filters  app.rc  assemblyinfo.cpp  magneto.h  magnetolib.h  stdafx.cpp  stdafx.h
overlay_protocol/: LICENSE  README.md  generate.sh
overlay_protocol/flatbuffers/: all.fbs
overlay_protocol/java/: build.gradle
overlay_protocol/rust/: Cargo.toml
patches/: i18next-fluent-backend+0.0.3.patch
resources/: LICENSE.txt  ThirdPartyNotices.txt  firewall.bat  firewall_uninstall.bat  run.bat
server/: .gitignore  README.md  architecture.dot  build.gradle  build.gradle.kts  detekt.yml  vrconfig.save.yml
server/android/: .gitignore  build.gradle.kts  proguard-rules.pro
server/core/: build.gradle.kts
server/desktop/: .gitignore  batteryData.csv  build.gradle.kts  installusbdrivers.bat  protobuf_update.bat  steamcleanexternaldrivers.ps1  steamvr.ps1  update-manifest.json  vrconfig.yml.bak  vrconfig.yml.v13.bak
server/ios/: .gitignore  Info.plist.xml  build.gradle.kts  robovm.properties  robovm.xml
server/resources/: ThirdPartyNotices.txt  run.bat
src/: App.tsx  gobals.d.ts  index.css  index.tsx  react-app-env.d.ts
src-tauri/: Cargo.toml  run.bat  run.bat.old  tauri.conf.json
src-tauri/src/: main.rs
src/components/: BVHButton.tsx  BigButton.tsx  BodyProportions.tsx  MainLayout.tsx  Manage.tsx  Modal.tsx  Navbar.tsx  Overview.tsx  ResetButton.tsx  Settings.tsx  TopBar.tsx  TrackerCard.tsx  WifiButton.tsx
src/hooks/: app.ts  autobone.ts  config.ts  layout.ts  reset.ts  router.ts  timeout.ts  websocket-api.ts
src/maths/: angle.ts  quaternion.ts
svr-bindings-provider/: CMakeLists.txt  vcpkg.json
svr-bindings-provider/src/: logger.cpp  main.cpp  paths.cpp  solarxr.cpp  solarxr.hpp  vr_utils.cpp
svr-bindings-provider/src/resources/: manifest.vrmanifest  resources.hpp.in
updater/: .gitignore  LICENSE.md  build.gradle.kts  spotless.xml
updater/desktop/: build.gradle.kts  compose-proguard-rules.pro
(+1968 files in other folders)
