[package]
name = "slimevr"
version = "0.0.0"

description = "SlimeVR GUI Application"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SlimeVR/SlimeVR-Server"

edition = "2021"
rust-version = "1.65"
default-run = "slimevr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "=2.0.0-beta.10", features = [] }
cfg_aliases = "0.2"
shadow-rs = "0.27"

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "=2.0.0-beta.12", features = ["devtools", "tray-icon", "image-png"] }
tauri-runtime = "=2.0.0-beta.10"
tauri-plugin-dialog = "=2.0.0-beta.2"
tauri-plugin-fs = "=2.0.0-beta.2"
tauri-plugin-os = "=2.0.0-beta.2"
tauri-plugin-shell = "=2.0.0-beta.2"
flexi_logger = "0.28"
log-panics = { version = "2", features = ["with-backtrace"] }
log = "0.4"
clap = { version = "4.0.29", features = ["derive"] }
clap-verbosity-flag = "2"
rand = "0.8.5"
tempfile = "3"
which = "6.0"
glob = "0.3"
open = "5"
shadow-rs = { version = "0.27", default-features = false }
const_format = "0.2.30"
cfg-if = "1"
color-eyre = "0.6"
rfd = { version = "0.14", features = ["gtk3"], default-features = false }
dirs-next = "2.0.0"

[target.'cfg(windows)'.dependencies]
win32job = "1"
winreg = "0.52"
